# decision-models

./: .clang-format  CMakeLists.txt  ChangeLog.md  README.md  main.cpp
core/include/: decision_method.h  heuristic_decision_method.h  max_algebra.h  tropical.h
core/src/: heuristic_decision_method.cpp  main.cpp  tropical.cpp
tests/: ahp_tasks_tests.cpp  gm_tasks_tests.cpp  tropical_tasks_tests.cpp  tropical_tests.cpp
tests/decision_methods/: ahp_tasks_tests.cpp  gm_tasks_tests.cpp  tropical_tasks_tests.cpp  tropical_tests.cpp
tests/decision_model/: matrices_utils.cpp  model_ranking.cpp
trunk/core/include/: DecisionModel.h  DecisionModelsDB.h  ahp_decision_method.h  decision_method.h  decision_model.h  decision_models_db.h  gm_decision_method.h  heuristic_decision_method.h  max_algebra.h  tropical.h  tropical_decision_method.h
trunk/core/include/decision_methods/: ahp_decision_method.h  decision_method.h  gm_decision_method.h  matrices_utils.h  tropical.h  tropical_decision_method.h  utils.h
trunk/core/include/ui/: CompareAlternativesDialog.h  CompareCriteriaDialog.h  CompareDialogBase.h  DecisionModelDialog.h  StartMenu.h  start_menu.h
trunk/core/src/: DecisionModel.cpp  DecisionModelsDB.cpp  ahp_decision_method.cpp  decision_method.cpp  decision_model.cpp  decision_models_db.cpp  gm_decision_method.cpp  heuristic_decision_method.cpp  main.cpp  tropical.cpp  tropical_decision_method.cpp
trunk/core/src/decision_methods/: ahp_decision_method.cpp  decision_method.cpp  gm_decision_method.cpp  tropical.cpp  tropical_decision_method.cpp  utils.cpp
trunk/core/src/ui/: CompareAlternativesDialog.cpp  CompareAlternativesDialog.ui  CompareCriteriaDialog.cpp  CompareCriteriaDialog.ui  CompareDialogBase.cpp  CompareDialogBase.ui  DecisionModelDialog.cpp  DecisionModelDialog.ui  StartMenu.cpp  StartMenu.ui  start_menu.cpp  start_menu.ui
